@@ -1,23 +1,34 @@
 package com.sascom.chickenstock.domain.member.service;
 
-import com.sascom.chickenstock.domain.account.entity.Account;
 import com.sascom.chickenstock.domain.account.repository.AccountRepository;
 import com.sascom.chickenstock.domain.competition.repository.CompetitionRepository;
+import com.sascom.chickenstock.domain.member.dto.MagicNumbers;
 import com.sascom.chickenstock.domain.member.dto.request.ChangeInfoRequest;
 import com.sascom.chickenstock.domain.member.dto.response.ChangeInfoResponse;
 import com.sascom.chickenstock.domain.member.dto.response.MemberInfoResponse;
 import com.sascom.chickenstock.domain.member.dto.response.PrefixNicknameInfosResponse;
 import com.sascom.chickenstock.domain.member.entity.Member;
+import com.sascom.chickenstock.domain.member.error.code.MemberErrorCode;
+import com.sascom.chickenstock.domain.member.error.exception.MemberNotFoundException;
 import com.sascom.chickenstock.domain.member.repository.MemberRepository;
 import com.sascom.chickenstock.domain.ranking.util.RatingCalculatorV1;
+import com.sascom.chickenstock.global.util.SecurityUtil;
+import jakarta.annotation.PostConstruct;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-
+import org.springframework.web.multipart.MultipartFile;
+import javax.imageio.ImageIO;
+import java.awt.image.BufferedImage;
+import java.io.*;
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.*;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import org.imgscalr.Scalr;
 
 @Service
 public class MemberService {
@@ -25,6 +36,17 @@ public class MemberService {
     private final AccountRepository accountRepository;
     private final CompetitionRepository competitionRepository;
 
+    @Value("${image.url}")
+    private String imgUrl;
+
+    @Value("${image.directories}")
+    private String uploadPath;
+
+    @Value("${image.default-img-name}")
+    private String defaultImgName;
+
+    private final DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMddHHmmss");
+    
     @Autowired
     public MemberService(MemberRepository memberRepository,
                          AccountRepository accountRepository,
@@ -34,7 +56,17 @@ public class MemberService {
         this.competitionRepository = competitionRepository;
     }
 
-    public MemberInfoResponse lookUpMemberInfo(Long userId) {
+    @PostConstruct
+    public void init() {
+        uploadPath = File.separator + String.join(File.separator, uploadPath.split(","));
+        System.out.println(uploadPath);
+        File uploadDirectory = new File(uploadPath);
+        if (!uploadDirectory.exists()) {
+            uploadDirectory.mkdirs(); // 디렉터리 생성
+        }
+    }
+
+    public MemberInfoResponse lookUpMemberInfo(Long userId) throws IOException{
         Member member = memberRepository.findById(userId)
                 .orElseThrow(() -> new IllegalStateException("invalid userId"));
 
@@ -68,14 +100,26 @@ public class MemberService {
         return new ChangeInfoResponse(savedMember.getNickname());
     }
 
-    public PrefixNicknameInfosResponse searchPrefixNicknameMemberInfos(String prefix) {
+    @Transactional
+    public String changeNickname(String nickname) {
+        Long memberId = SecurityUtil.getCurrentMemberId();
+        Member member = memberRepository.findById(memberId)
+                .orElseThrow(() -> MemberNotFoundException.of(MemberErrorCode.NOT_FOUND));
+        // validate nickname
+
+        member.updateNickname(nickname);
+        memberRepository.save(member);
+        return nickname;
+    }
+
+    public PrefixNicknameInfosResponse searchPrefixNicknameMemberInfos(String prefix) throws IOException{
         List<Member> memberList = memberRepository.findFirst10ByNicknameStartingWithOrderByNickname(prefix);
 
-        List<MemberInfoResponse> result = memberList.stream()
-                .map(this::toMemberInfoResponse)
-                .collect(Collectors.toList());
-
-        return new PrefixNicknameInfosResponse(result);
+        return new PrefixNicknameInfosResponse(
+                memberList.stream()
+                        .map(this::toMemberInfoResponse)
+                        .toList()
+        );
     }
 
     // Member -> MemberInfoResponse
@@ -84,7 +128,9 @@ public class MemberService {
                 member.getId(),
                 member.getNickname(),
                 RatingCalculatorV1.calculateRating(member.getAccounts()),
-                member.getPoint());
+                member.getPoint(),
+                imgUrl + "/" + member.getImgName()
+        );
     }
 
     // check that given new password is fit to safe password standard.
@@ -97,5 +143,93 @@ public class MemberService {
     public Member findByEmail(String email) {
         return memberRepository.findByEmail(email)
                 .orElseThrow(EntityNotFoundException::new);
+    }
+
+    public Member findById(Long userId){
+        return memberRepository.findById(userId)
+                .orElseThrow(EntityNotFoundException::new);
+    }
+
+
+
+//    public void setImage(Member member, MultipartFile file) throws IOException {
+//        if(file.isEmpty()){
+//            //return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+//            throw MemberNotFoundException.of(MemberErrorCode.NO_FILE);
+//        }
+//
+//        String ImageUuid = UUID.randomUUID().toString();
+//        String file_name = ImageUuid + file.getOriginalFilename();
+//        String img_path = "C:\\Users\\SSAFY\\Image\\" + file_name;
+//        String img_link = "http://localhost:8080" + file_name;
+//        File dest = new File(img_path);
+//
+//        String format = file_name.substring(file_name.lastIndexOf(".")+1);
+//        BufferedImage bufferedImage = Scalr.resize(ImageIO.read(file.getInputStream()), 50, 50, Scalr.OP_ANTIALIAS);
+//        ImageIO.write(bufferedImage, format, dest);
+//
+//        Image image = new Image(img_link, file_name, "C:\\Users\\SSAFY\\Image\\");
+//        member.updateImage(image);
+//        member.updateImageUuid(ImageUuid);
+//        memberRepository.save(member);
+//    }
+
+    @Transactional
+    public void setImage(MultipartFile file) {
+        Member member = memberRepository.findById(SecurityUtil.getCurrentMemberId())
+                .orElseThrow(() -> MemberNotFoundException.of(MemberErrorCode.NOT_FOUND));
+        if(file.isEmpty()) {
+            throw MemberNotFoundException.of(MemberErrorCode.NO_FILE);
+        }
+        String extension = null;
+        byte[] fileBytes = null;
+        try {
+            fileBytes = file.getBytes();
+            if (MagicNumbers.JPG.is(fileBytes)) {
+                extension = "jpg";
+            }
+            else if (MagicNumbers.PNG.is(fileBytes)) {
+                extension = "png";
+            }
+        } catch(IOException e) {
+            throw new IllegalStateException("file handle error");
+        }
+        if(extension == null) {
+            throw MemberNotFoundException.of(MemberErrorCode.NO_FILE);
+        }
+        String fileName = UUID.randomUUID().toString() + LocalDateTime.now().format(formatter)
+                + "." + extension;
+        member.updateImgName(fileName);
+        memberRepository.save(member);
+
+        File dest = new File(uploadPath + File.separator + fileName);
+        try {
+            BufferedImage bufferedImage = Scalr.resize(ImageIO.read(new ByteArrayInputStream(fileBytes)), 800, 600, Scalr.OP_ANTIALIAS);
+            ImageIO.write(bufferedImage, extension, dest);
+        } catch(IOException e) {
+            throw new IllegalStateException("resize handle error");
+        }
+    }
+
+    public byte[] getImage(Long id) throws IOException{
+        Member member = memberRepository.findById(id)
+                .orElseThrow(EntityNotFoundException::new);
+        String imgName = member.getImgName();
+        // 이미지를 InputStream에 읽어오기
+        InputStream inputStream = new FileInputStream(uploadPath + File.separator + imgName);
+
+        // InputStream에 읽어 온 이미지를 byte 배열에 저장
+        byte[] bytes = inputStream.readAllBytes();
+        inputStream.close();
+        return bytes;
+    }
+
+    @Transactional
+    public void deleteImage() {
+        // soft delete // 이미지 경로만 default로 바꿔줌
+        Member member = memberRepository.findById(SecurityUtil.getCurrentMemberId())
+                .orElseThrow(() -> MemberNotFoundException.of(MemberErrorCode.NOT_FOUND));
+        member.updateImgName(defaultImgName);
+        memberRepository.save(member);
     }
 }
